--- a/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods-not-run.html
+++ b/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>commons.BaseTest.cleanExecutableDriver</td></tr>
+<tr><td>commons.BaseTest.cleanExecutableDriver</td></tr>
+<tr><td>commons.BaseTest.beforeSuit</td></tr>
+<tr><td>commons.BaseTest.beforeSuit</td></tr>
 </table>
