--- a/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/classes.html
+++ b/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/classes.html
@@ -4,34 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.TC_Login</td>
+<td>com.nopcommerce.user.TC_Add_New_Address</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Login_Empty</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_02_Login_Invalid_Email</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_06_Login_Successfully</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_04_Login_With_Empty_Password</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_03_Login_Not_Registered_Email</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_05_Login_With_Wrong_Password</td>
+<td>TC_Update_Address</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -54,30 +34,22 @@
 <td>afterClass</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>com.nopcommerce.user.TC_Search</td>
+<td>com.nopcommerce.user.TC_Change_Password</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_02_Search_Less_Than_3_Characters</td>
+<td>TC_03_Login_Successfully_With_New_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_04_Relative_Search_With_Product_Name</td>
+<td>TC_02_Login_Falied_With_Old_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_03_Search_Return_No_Value</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_05_Absolute_Search_With_Product_Name</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_01_Search_Empty_Data</td>
+<td>TC_01_Change_Password</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
