--- a/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods-alphabetical.html
+++ b/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods-alphabetical.html
@@ -1,40 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce.User</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_01_Login_Empty(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">TC_01_Login_Empty</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="d7b2b2">  <td>22/05/02 22:17:15</td>   <td>8720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search.TC_01_Search_Empty_Data(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search@6ab4ba9f]">TC_01_Search_Empty_Data</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:07</td>   <td>876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_02_Login_Invalid_Email(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">TC_02_Login_Invalid_Email</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="d7b2b2">  <td>22/05/02 22:17:15</td>   <td>8777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search.TC_02_Search_Less_Than_3_Characters(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search@6ab4ba9f]">TC_02_Search_Less_Than_3_Characters</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:08</td>   <td>1390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_03_Login_Not_Registered_Email(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">TC_03_Login_Not_Registered_Email</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="d7b2b2">  <td>22/05/02 22:17:16</td>   <td>9348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search.TC_03_Search_Return_No_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search@6ab4ba9f]">TC_03_Search_Return_No_Value</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:09</td>   <td>2402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_04_Login_With_Empty_Password(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">TC_04_Login_With_Empty_Password</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="d7b2b2">  <td>22/05/02 22:17:16</td>   <td>9850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search.TC_04_Relative_Search_With_Product_Name(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search@6ab4ba9f]">TC_04_Relative_Search_With_Product_Name</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="d7b2b2">  <td>22/05/02 22:17:17</td>   <td>10426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search.TC_05_Absolute_Search_With_Product_Name(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search@6ab4ba9f]">TC_05_Absolute_Search_With_Product_Name</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:09</td>   <td>3225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_05_Login_With_Wrong_Password(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">TC_05_Login_With_Wrong_Password</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:11</td>   <td>4305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login.TC_06_Login_Successfully(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">TC_06_Login_Successfully</td> 
-  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:12</td>   <td>5535</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Login.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="d7b2b2">  <td>22/05/02 22:17:17</td>   <td>10925</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Search.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Search@6ab4ba9f]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="8693ae">  <td>22/05/02 22:16:58</td>   <td>-8592</td> <td>&nbsp;</td><td title="&gt;&gt;Common_RegisterToSystem.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@75769ab0]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="c0f59b">  <td>22/05/02 22:17:04</td>   <td>-2664</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Login.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Login@6869a3b3]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="d7b2b2">  <td>22/05/02 22:17:12</td>   <td>6209</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Search.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Search@6ab4ba9f]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@253106307</td>   <td></td> </tr>
-<tr bgcolor="ddd27b">  <td>22/05/02 22:16:58</td>   <td>-8617</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@75769ab0]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@685871974</td>   <td></td> </tr>
-<tr bgcolor="ddd27b">  <td>22/05/02 22:17:18</td>   <td>11817</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@75769ab0]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@685871974</td>   <td></td> </tr>
+<tr bgcolor="8496dc">  <td>22/05/21 00:18:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Change_Password.TC_01_Change_Password(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Change_Password@4c59e45e]">TC_01_Change_Password</td> 
+  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="8496dc">  <td>22/05/21 00:18:37</td>   <td>4168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Change_Password.TC_02_Login_Falied_With_Old_Password(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Change_Password@4c59e45e]">TC_02_Login_Falied_With_Old_Password</td> 
+  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="8496dc">  <td>22/05/21 00:18:38</td>   <td>5116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Change_Password.TC_03_Login_Successfully_With_New_Password(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Change_Password@4c59e45e]">TC_03_Login_Successfully_With_New_Password</td> 
+  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="7db587">  <td>22/05/21 00:18:44</td>   <td>10874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Add_New_Address.TC_Update_Address(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Add_New_Address@58ec7116]">TC_Update_Address</td> 
+  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="8496dc">  <td>22/05/21 00:18:40</td>   <td>6357</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Change_Password.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Change_Password@4c59e45e]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="7db587">  <td>22/05/21 00:18:47</td>   <td>14135</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Add_New_Address.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Add_New_Address@58ec7116]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="fafb74">  <td>22/05/21 00:18:23</td>   <td>-9727</td> <td>&nbsp;</td><td title="&gt;&gt;Common_RegisterToSystem.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@cb03411]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="8496dc">  <td>22/05/21 00:18:29</td>   <td>-3814</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Change_Password.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Change_Password@4c59e45e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="7db587">  <td>22/05/21 00:18:40</td>   <td>6995</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Add_New_Address.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Add_New_Address@58ec7116]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@990153614</td>   <td></td> </tr>
+<tr bgcolor="ecb29c">  <td>22/05/21 00:18:23</td>   <td>-9750</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@cb03411]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@284123040</td>   <td></td> </tr>
+<tr bgcolor="ecb29c">  <td>22/05/21 00:18:48</td>   <td>15008</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@cb03411]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@284123040</td>   <td></td> </tr>
 </table>
