Update NopCommerce Framework
+ Add new Page Object for UserProductCategory page
+ Add new test case TC_Sort_Display_Paging

--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
@@ -1,26 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_01_Search_Empty_Data(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_01_Search_Empty_Data</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_02_Search_Less_Than_3_Characters(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_02_Search_Less_Than_3_Characters</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_03_Search_Return_No_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_03_Search_Return_No_Value</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_04_Relative_Search_With_Product_Name(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_04_Relative_Search_With_Product_Name</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_05_Absolute_Search_With_Product_Name(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_05_Absolute_Search_With_Product_Name</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_06_Advanced_Search_Parent_Category(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_06_Advanced_Search_Parent_Category</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_07_Advanced_Search_Sub_Category(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_07_Advanced_Search_Sub_Category</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_08_Advanced_Search_Incorrect_Manufacturer(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_08_Advanced_Search_Incorrect_Manufacturer</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="728dab">  <td>22/05/21 17:29:02</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_09_Advanced_Search_Correct_Manufacturer(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">TC_09_Advanced_Search_Correct_Manufacturer</td> 
-  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="ba88ee">  <td>22/05/21 17:29:01</td>   <td>-211</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@910101408</td>   <td></td> </tr>
-<tr bgcolor="ba88ee">  <td>22/05/21 17:29:02</td>   <td>59</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@1fde4f40]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@910101408</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/05/25 01:31:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_01_Sort_A_To_Z</td> 
+  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/05/25 01:31:25</td>   <td>757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_02_Sort_Low_To_High</td> 
+  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/05/25 01:31:25</td>   <td>1411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_04_Display_3_Value</td> 
+  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/05/25 01:31:56</td>   <td>32543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_05_Display_6_Value</td> 
+  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/05/25 01:32:08</td>   <td>44244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_06_Display_9_Value</td> 
+  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/05/25 01:32:14</td>   <td>49878</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_Display_Paging.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="d08f8d">  <td>22/05/25 01:31:20</td>   <td>-4255</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_Display_Paging.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="6bfb84">  <td>22/05/25 01:31:20</td>   <td>-4275</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="6bfb84">  <td>22/05/25 01:32:14</td>   <td>50540</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
 </table>
