--- a/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
@@ -4,46 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.TC_Search_Advanced</td>
+<td>com.nopcommerce.user.TC_Sort_Display_Paging</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_02_Search_Less_Than_3_Characters</td>
+<td>TC_01_Sort_A_To_Z</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_04_Relative_Search_With_Product_Name</td>
+<td>TC_05_Display_6_Value</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_03_Search_Return_No_Value</td>
+<td>TC_06_Display_9_Value</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_07_Advanced_Search_Sub_Category</td>
+<td>TC_02_Sort_Low_To_High</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_05_Absolute_Search_With_Product_Name</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_09_Advanced_Search_Correct_Manufacturer</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_01_Search_Empty_Data</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_08_Advanced_Search_Incorrect_Manufacturer</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_06_Advanced_Search_Parent_Category</td>
+<td>TC_04_Display_3_Value</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
