Update NopCommerce framework
+ Add Extent Report to TC_Sort_Display_Paging
+ Add new TC_Wishlist_Compare_Recent_View
+ Add UserWishlistPageObject and UserWishlistPageUI

--- a/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods.html
+++ b/com.hybrid.nopcommerce/test-output/old/NopCommerce.User/methods.html
@@ -1,46 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce.User</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ddd27b">  <td>22/05/24 23:16:44</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@27ace0b1]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1529303412</td>   <td></td> </tr>
-<tr bgcolor="8496dc">  <td>22/05/24 23:16:45</td>   <td>53</td> <td>&nbsp;</td><td title="&gt;&gt;Common_RegisterToSystem.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@27ace0b1]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="8acd6b">  <td>22/05/24 23:16:52</td>   <td>7071</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Search_With_SearchBar.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Search_With_SearchBar@664e5dee]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="8acd6b">  <td>22/05/24 23:16:54</td>   <td>9960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_With_SearchBar.TC_01_Search_Empty_Data(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_With_SearchBar@664e5dee]">TC_01_Search_Empty_Data</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="8acd6b">  <td>22/05/24 23:16:55</td>   <td>10107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_With_SearchBar.TC_02_Search_Less_Than_3_Characters(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_With_SearchBar@664e5dee]">TC_02_Search_Less_Than_3_Characters</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="8acd6b">  <td>22/05/24 23:16:55</td>   <td>10731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_With_SearchBar.TC_03_Search_Return_No_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_With_SearchBar@664e5dee]">TC_03_Search_Return_No_Value</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="8acd6b">  <td>22/05/24 23:16:56</td>   <td>11255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_With_SearchBar.TC_04_Search_Return_Multiple_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_With_SearchBar@664e5dee]">TC_04_Search_Return_Multiple_Value</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="8acd6b">  <td>22/05/24 23:16:56</td>   <td>11832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_With_SearchBar.TC_05_Search_Return_One_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_With_SearchBar@664e5dee]">TC_05_Search_Return_One_Value</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="8acd6b">  <td>22/05/24 23:16:57</td>   <td>12320</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Search_With_SearchBar.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Search_With_SearchBar@664e5dee]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:16:57</td>   <td>12962</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Search_Advanced.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:01</td>   <td>16083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_01_Search_Empty_Data(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_01_Search_Empty_Data</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:01</td>   <td>16548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_02_Search_Less_Than_3_Characters(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_02_Search_Less_Than_3_Characters</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:01</td>   <td>17030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_03_Search_Return_No_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_03_Search_Return_No_Value</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:02</td>   <td>17536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_04_Relative_Search_With_Product_Name(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_04_Relative_Search_With_Product_Name</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:03</td>   <td>18127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_05_Absolute_Search_With_Product_Name(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_05_Absolute_Search_With_Product_Name</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:03</td>   <td>18632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_06_Advanced_Search_Parent_Category(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_06_Advanced_Search_Parent_Category</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:04</td>   <td>19297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_07_Advanced_Search_Sub_Category(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_07_Advanced_Search_Sub_Category</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:04</td>   <td>20022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_08_Advanced_Search_Incorrect_Manufacturer(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_08_Advanced_Search_Incorrect_Manufacturer</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:05</td>   <td>20815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Search_Advanced.TC_09_Advanced_Search_Correct_Manufacturer(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">TC_09_Advanced_Search_Correct_Manufacturer</td> 
-  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="817a69">  <td>22/05/24 23:17:06</td>   <td>21583</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Search_Advanced.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Search_Advanced@431f1eaf]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@593108981</td>   <td></td> </tr>
-<tr bgcolor="ddd27b">  <td>22/05/24 23:17:07</td>   <td>22500</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@27ace0b1]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1529303412</td>   <td></td> </tr>
+<tr bgcolor="ab988f">  <td>22/05/31 22:17:40</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@6869a3b3]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125903542</td>   <td></td> </tr>
+<tr bgcolor="ac6eae">  <td>22/05/31 22:17:40</td>   <td>28</td> <td>&nbsp;</td><td title="&gt;&gt;Common_RegisterToSystem.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@6869a3b3]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:17:48</td>   <td>7450</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_Display_Paging.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:17:52</td>   <td>11447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_01_Sort_A_To_Z</td> 
+  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:17:53</td>   <td>12224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_02_Sort_Low_To_High</td> 
+  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:17:53</td>   <td>12872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_03_Sort_High_To_Low(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_03_Sort_High_To_Low</td> 
+  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:17:54</td>   <td>13505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_04_Display_3_Value</td> 
+  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:18:25</td>   <td>44671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_05_Display_6_Value</td> 
+  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:18:37</td>   <td>56401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">TC_06_Display_9_Value</td> 
+  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="e26e6b">  <td>22/05/31 22:18:42</td>   <td>62044</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_Display_Paging.afterClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@6ab4ba9f]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1039476612</td>   <td></td> </tr>
+<tr bgcolor="ab988f">  <td>22/05/31 22:18:43</td>   <td>62943</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.commons.Common_RegisterToSystem@6869a3b3]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2125903542</td>   <td></td> </tr>
 </table>
