--- a/com.hybrid.nopcommerce/test-output/index.html
+++ b/com.hybrid.nopcommerce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse-2137950770\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1228930324\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,27 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Sort_Display_Paging" class="method navigator-link" hash-for-method="TC_01_Sort_A_To_Z(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method))">TC_01_Sort_A_To_Z(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method))</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Sort_Display_Paging" class="method navigator-link" hash-for-method="TC_02_Sort_Low_To_High(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Met...)">TC_02_Sort_Low_To_High(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Met...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Sort_Display_Paging" class="method navigator-link" hash-for-method="TC_04_Display_3_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Meth...)">TC_04_Display_3_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Meth...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Sort_Display_Paging" class="method navigator-link" hash-for-method="TC_05_Display_6_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Meth...)">TC_05_Display_6_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Meth...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Sort_Display_Paging" class="method navigator-link" hash-for-method="TC_06_Display_9_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Meth...)">TC_06_Display_9_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Meth...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.nopcommerce.user.TC_Wishlist_Compare_Recent_View" class="method navigator-link" hash-for-method="TC_01_Search_Empty_Data(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.r...)">TC_01_Search_Empty_Data(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.r...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -140,47 +120,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.TC_Sort_Display_Paging</span>
+              <span class="class-name">com.nopcommerce.user.TC_Wishlist_Compare_Recent_View</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_01_Sort_A_To_Z(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method))">
-                  </a> <!-- TC_01_Sort_A_To_Z(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method)) -->
-                  <span class="method-name">TC_01_Sort_A_To_Z</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method))</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_02_Sort_Low_To_High(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Met...)">
-                  </a> <!-- TC_02_Sort_Low_To_High(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Met...) -->
-                  <span class="method-name">TC_02_Sort_Low_To_High</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Method))</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_04_Display_3_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Meth...)">
-                  </a> <!-- TC_04_Display_3_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Meth...) -->
-                  <span class="method-name">TC_04_Display_3_Value</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Method))</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_05_Display_6_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Meth...)">
-                  </a> <!-- TC_05_Display_6_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Meth...) -->
-                  <span class="method-name">TC_05_Display_6_Value</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Method))</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="TC_06_Display_9_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Meth...)">
-                  </a> <!-- TC_06_Display_9_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Meth...) -->
-                  <span class="method-name">TC_06_Display_9_Value</span>
-                  <span class="parameters">(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Method))</span>
+                  <a name="TC_01_Search_Empty_Data(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.r...)">
+                  </a> <!-- TC_01_Search_Empty_Data(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.r...) -->
+                  <span class="method-name">TC_01_Search_Empty_Data</span>
+                  <span class="parameters">(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.reflect.Method))</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse-2137950770\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse--1228930324\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.TC_Sort_Display_Paging&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.TC_Wishlist_Compare_Recent_View&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -237,32 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_04_Display_3_Value')
-data.setCell(0, 2, 'com.nopcommerce.user.TC_Sort_Display_Paging')
-data.setCell(0, 3, 31130);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TC_05_Display_6_Value')
-data.setCell(1, 2, 'com.nopcommerce.user.TC_Sort_Display_Paging')
-data.setCell(1, 3, 11700);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'TC_06_Display_9_Value')
-data.setCell(2, 2, 'com.nopcommerce.user.TC_Sort_Display_Paging')
-data.setCell(2, 3, 5633);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'TC_01_Sort_A_To_Z')
-data.setCell(3, 2, 'com.nopcommerce.user.TC_Sort_Display_Paging')
-data.setCell(3, 3, 710);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'TC_02_Sort_Low_To_High')
-data.setCell(4, 2, 'com.nopcommerce.user.TC_Sort_Display_Paging')
-data.setCell(4, 3, 652);
+data.setCell(0, 1, 'TC_01_Search_Empty_Data')
+data.setCell(0, 2, 'com.nopcommerce.user.TC_Wishlist_Compare_Recent_View')
+data.setCell(0, 3, 42600);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 49 seconds</span>
+              <span class="suite-total-time">Total running time: 42 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -288,42 +220,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.TC_Sort_Display_Paging</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.TC_Wishlist_Compare_Recent_View</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuit</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">25 ms</span>
+                <span class="method-start">31 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">TC_01_Sort_A_To_Z(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method))</span>
-                <span class="method-start">4280 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_02_Sort_Low_To_High(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Met...)</span>
-                <span class="method-start">5037 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_04_Display_3_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Meth...)</span>
-                <span class="method-start">5691 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_05_Display_6_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Meth...)</span>
-                <span class="method-start">36823 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TC_06_Display_9_Value(public void com.nopcommerce.user.TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Meth...)</span>
-                <span class="method-start">48524 ms</span>
+                <span class="method-name">TC_01_Search_Empty_Data(public void com.nopcommerce.user.TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.r...)</span>
+                <span class="method-start">6355 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">54158 ms</span>
+                <span class="method-start">49003 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanExecutableDriver</span>
-                <span class="method-start">54820 ms</span>
+                <span class="method-start">49682 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
