--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d08f8d">  <td>22/05/25 01:31:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_01_Sort_A_To_Z(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_01_Sort_A_To_Z</td> 
-  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/05/25 01:31:25</td>   <td>757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_02_Sort_Low_To_High(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_02_Sort_Low_To_High</td> 
-  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/05/25 01:31:25</td>   <td>1411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_04_Display_3_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_04_Display_3_Value</td> 
-  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/05/25 01:31:56</td>   <td>32543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_05_Display_6_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_05_Display_6_Value</td> 
-  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/05/25 01:32:08</td>   <td>44244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Sort_Display_Paging.TC_06_Display_9_Value(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">TC_06_Display_9_Value</td> 
-  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/05/25 01:32:14</td>   <td>49878</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Sort_Display_Paging.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="d08f8d">  <td>22/05/25 01:31:20</td>   <td>-4255</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Sort_Display_Paging.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="6bfb84">  <td>22/05/25 01:31:20</td>   <td>-4275</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
-<tr bgcolor="6bfb84">  <td>22/05/25 01:32:14</td>   <td>50540</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Sort_Display_Paging@7144655b]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1468192631</td>   <td></td> </tr>
+<tr bgcolor="65a76a">  <td>22/05/31 23:52:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">TC_01_Search_Empty_Data</td> 
+  <td>main@1812200214</td>   <td></td> </tr>
+<tr bgcolor="65a76a">  <td>22/05/31 23:53:19</td>   <td>42648</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Wishlist_Compare_Recent_View.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
+<tr bgcolor="65a76a">  <td>22/05/31 23:52:30</td>   <td>-6324</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Wishlist_Compare_Recent_View.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
+<tr bgcolor="92656b">  <td>22/05/31 23:52:30</td>   <td>-6350</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
+<tr bgcolor="92656b">  <td>22/05/31 23:53:19</td>   <td>43327</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
 </table>
