Update NopCommerce Maven Hybrid Framework
+ Add new class: UserProductCartPageObject and UserProductCartPageUI
+ Add new TC to TC_02_Add_To_Product_Cart and TC_03_Check_Empty_Wishlist
on TC_Wishlist_Compare_Recent_View
+ Add some new functions to check/uncheck product, click AddCart, check
wishlist empty and remove product on UserWishlistPageObject

--- a/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_01_Search_Empty_Data</td>
+<td>TC_03_Check_Empty_Wishlist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
