--- a/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
+++ b/com.hybrid.nopcommerce/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92656b">  <td>22/05/31 23:52:30</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&gt;&gt;beforeSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
-<tr bgcolor="65a76a">  <td>22/05/31 23:52:30</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Wishlist_Compare_Recent_View.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
-<tr bgcolor="65a76a">  <td>22/05/31 23:52:36</td>   <td>6350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_01_Search_Empty_Data(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">TC_01_Search_Empty_Data</td> 
-  <td>main@1812200214</td>   <td></td> </tr>
-<tr bgcolor="65a76a">  <td>22/05/31 23:53:19</td>   <td>48998</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Wishlist_Compare_Recent_View.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
-<tr bgcolor="92656b">  <td>22/05/31 23:53:19</td>   <td>49677</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@14379273]">&lt;&lt;cleanExecutableDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1812200214</td>   <td></td> </tr>
+<tr bgcolor="9fa0ba">  <td>22/06/03 00:11:58</td>   <td>0</td> <td title="&gt;&gt;BaseTest.beforeSuit()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@46d9aec8]">&gt;&gt;beforeSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261257916</td>   <td></td> </tr>
+<tr bgcolor="baef84">  <td>22/06/03 00:11:58</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_Wishlist_Compare_Recent_View.beforeClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@46d9aec8]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261257916</td>   <td></td> </tr>
+<tr bgcolor="baef84">  <td>22/06/03 00:12:04</td>   <td>6406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Wishlist_Compare_Recent_View.TC_03_Check_Empty_Wishlist(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@46d9aec8]">TC_03_Check_Empty_Wishlist</td> 
+  <td>main@1261257916</td>   <td></td> </tr>
+<tr bgcolor="baef84">  <td>22/06/03 00:12:08</td>   <td>9995</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_Wishlist_Compare_Recent_View.afterClass()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@46d9aec8]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261257916</td>   <td></td> </tr>
+<tr bgcolor="9fa0ba">  <td>22/06/03 00:12:08</td>   <td>10680</td> <td title="&lt;&lt;BaseTest.cleanExecutableDriver()[pri:0, instance:com.nopcommerce.user.TC_Wishlist_Compare_Recent_View@46d9aec8]">&lt;&lt;cleanExecutableDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1261257916</td>   <td></td> </tr>
 </table>
